P01/force-app/main/default/objects/Shopping_Cart__c/fields/T_J_Product__c.field-meta.xml
<CustomField>
    <fullName>T_J_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;J Product</label>
    <referenceTo>ProductTJ__c</referenceTo>
    <relationshipLabel>Shopping Carts Items</relationshipLabel>
    <relationshipName>Shopping_Carts_Items</relationshipName>
    <type>Lookup</type>
</CustomField>